fix tabs overflow, add mobile hooks to check if it is mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -231,3 +231,21 @@ section {
 .animate-blink {
   animation: blink 1s step-end infinite;
 }
+
+/* Scrollbar */
+::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(233, 92, 11, 0.64);
+  border: 0px;
+  background-clip: padding-box;
+  border-radius: 5px;
+}
